# bookmark

./: .gitignore  backend_logic.py  backend_logic_backup.py  bulk_import_bookmarks.py  conveyor_worker.py  count_all_file_types.py  count_supabase_html.py  database.types.ts  exa.py  extract_bookmarks.py  filter_new_links.py  fix_category_parents.py  help_file.py  html_to_md_converter.py  main.py  main_backup.py  main_backup_2.py  main_backup_3.py  make_menu.py  migrate_summary.py  models.py  nuxt_final_res.txt  nuxt_final_test.txt  package-lock.json  package.json  populate_categories.py  process_bookmarks.py  process_screenshots.py  pyproject.toml  recalculate_category_counts.py  speech.py  test_ai_providers.py  test_menu.py  update_category_counts.py  work.py
ai-work/: cpp.py  groq-time-test.py  groq_ai.py  info-content-groq.md  info-content-openrouter.md  info-error-openrouter.md  info-time-groq.md  info-time-openrouter.md  openrouter-time-test.py  or-reasoning.py  or.py
docs/plans/: 2026-02-14-automatic-llm-provider-switching.md
frontend/nuxt-app/: nuxt.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/nuxt-app/app/: app.vue
frontend/nuxt-app/app/assets/css/: tailwind.css
frontend/nuxt-app/app/components/: AddBookmarkBar.vue  BookmarkCard.vue  ConveyorProgress.vue  GlobalPopover.vue  MainMenu.vue
frontend/nuxt-app/app/components/ui/calendar/: Calendar.vue
frontend/nuxt-app/app/components/ui/card/: Card.vue  CardContent.vue  CardHeader.vue  CardImage.vue  CardTitle.vue  index.ts
frontend/nuxt-app/app/components/ui/command/: Command.vue  CommandEmpty.vue  CommandGroup.vue  CommandInput.vue  CommandItem.vue  CommandList.vue  CommandSeparator.vue  CommandShortcut.vue  index.ts
frontend/nuxt-app/app/components/ui/dropdown-menu/: DropdownMenuContent.vue  DropdownMenuItem.vue  DropdownMenuSubContent.vue  DropdownMenuSubTrigger.vue  index.ts
frontend/nuxt-app/app/composables/: useBookmarks.ts  useCategories.ts  useConveyor.ts  useMenu.ts  usePopoverState.ts  useTheme.ts  use_center_position.ts
frontend/nuxt-app/app/layouts/: default.vue
frontend/nuxt-app/app/pages/: index.vue  login.vue
frontend/nuxt-app/app/pages/bookmark/: [id].vue
frontend/nuxt-app/app/pages/category/: [slug].vue
frontend/nuxt-app/app/utils/: formatDate.ts
llm/: __init__.py  bot.py  model.py  model_backup.py  providers.py
public/: menu.json
static/: app.js  index.html
telegram/: bot.py
tests/: test_llm_providers.py
(+2 files in other folders)
